--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 /* Колір фону г-ф #2F303A */
 /* колір  вторичного фону: #F5F4FA */
 /* фон img: #AFB1B8 */
+/* градент:  rgba(47, 48, 58, 0.8); */
 
 :root {
   --primary-text-color: #757575;
@@ -14,6 +15,7 @@
   --background-h-f-color: #2f303a;
   --background-minor-color: #f5f4fa;
   --background-color-icons: #afb1b8;
+  --linear-gradient-color: rgba(47, 48, 58, 0.8);
 }
 
 body {
@@ -120,13 +122,31 @@ p {
   color: var(--accent-color);
 }
 
-/* .current::after {
-  width: 48px;
+.nav-link {
+  position: relative;
+}
+
+.nav-link::after {
+  content: '';
+  position: absolute;
+
+  width: 100%;
+  height: 2px;
+
+  bottom: 0;
+  left: 0;
+
+  background-color: var(--accent-color);
+  background-repeat: 4px;
+}
+
+.current::after {
+  content: '';
+  width: 100%;
   height: 4px;
 
-  background: var(--accent-color);
   border-radius: 2px;
-} */
+}
 
 /* Styles do auth-link  (nav) */
 .auth-nav {
@@ -189,8 +209,8 @@ p {
 
   background-image: linear-gradient(
       to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
+      var(--linear-gradient-color),
+      var(--linear-gradient-color)
     ),
     url(../images/Img.svg);
   background-repeat: no-repeat;
@@ -315,8 +335,34 @@ p {
 }
 
 .works-item {
+  position: relative;
+
   width: 370px;
   height: 294px;
+}
+
+.works-container {
+  position: absolute;
+  text-align: center;
+  left: 0;
+  bottom: 0;
+
+  width: 370px;
+  height: 70px;
+  padding-top: 27px;
+  padding-bottom: 27px;
+
+  background: var(--linear-gradient-color);
+}
+
+.works-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+
+  text-transform: uppercase;
+
+  color: var(--text-white-color);
 }
 
 .works-list .works-item + .works-item {
@@ -604,6 +650,26 @@ p {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
+.filter-images {
+  position: relative;
+}
+
+
+.filter-images-text {
+  /* position: absolute; */
+  margin-left: 0;
+  margin-top: 0;
+
+  padding: 63px 24px;
+
+  font-size: 18px;
+  line-height: 1.55;
+
+  color: var(--text-white-color);
+  background: rgba(33, 150, 243, 0.9);
+}
+
 
 .filter-container {
   padding: 20px 24px;
