--- a/css/styles.css
+++ b/css/styles.css
@@ -651,15 +651,34 @@ p {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+/* .filter-images:hover::before {
+  opacity: 1;
+}
+
 .filter-images {
   position: relative;
 }
 
+.filter-images::before {
+  display: inline-block;
+  content: '';
+
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+  background: rgba(33, 150, 243, 0.9);
+
+  opacity: 0;
+} */
+
+.filter-images {
+  position: relative;
+  display: flex;
+}
 
 .filter-images-text {
-  /* position: absolute; */
-  margin-left: 0;
-  margin-top: 0;
+  position: absolute;
 
   padding: 63px 24px;
 
@@ -668,8 +687,13 @@ p {
 
   color: var(--text-white-color);
   background: rgba(33, 150, 243, 0.9);
+
+  opacity: 0;
 }
 
+.filter-images-text:hover {
+  opacity: 1;
+}
 
 .filter-container {
   padding: 20px 24px;
@@ -702,4 +726,51 @@ p {
 .filter-text {
   font-size: 16px;
   line-height: 1.87;
+}
+
+/* Модальне вікно */
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.modal.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal-window {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  height: 581px;
+
+  background: var(--text-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal-button {
+  border: none;
+
+  width: 30px;
+  height: 30px;
+
+  background-image: url(../images/close-black-18dp.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: var(--text-white-color);
+
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
