--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 /* колір  вторичного фону: #F5F4FA */
 /* фон img: #AFB1B8 */
 /* градент:  rgba(47, 48, 58, 0.8); */
+/* кубік безір:(0.4, 0, 0.2, 1)*/
 
 :root {
   --primary-text-color: #757575;
@@ -16,6 +17,7 @@
   --background-minor-color: #f5f4fa;
   --background-color-icons: #afb1b8;
   --linear-gradient-color: rgba(47, 48, 58, 0.8);
+  --cubic-bezier: (0.4, 0, 0.2, 1);
 }
 
 body {
@@ -111,6 +113,10 @@ p {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .nav-list .link:hover,
@@ -173,6 +179,10 @@ p {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  transition-property: color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .auth-nav .link:hover,
@@ -439,6 +449,16 @@ p {
   align-items: center;
 
   fill: var(--background-color-icons);
+
+  transition-property: background-color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubic-bezier);
+}
+
+.network-link:hover,
+.network-link:focus {
+  background-color: var(--accent-color);
+  fill: var(--text-white-color);
 }
 
 .network-list li + li {
@@ -448,12 +468,6 @@ p {
 .icon-network {
   width: 20px;
   height: 20px;
-}
-
-.network-link:hover,
-.network-link:focus {
-  background-color: var(--accent-color);
-  fill: var(--text-white-color);
 }
 
 /* Постоянные клиенты */
@@ -478,6 +492,10 @@ p {
   border: 1px solid var(--background-color-icons);
   box-sizing: border-box;
   border-radius: 4px;
+
+  transition-property: border, fill;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .customers-link:hover,
@@ -570,6 +588,10 @@ p {
 
   background: rgba(255, 255, 255, 0.1);
   fill: var(--text-white-color);
+
+  transition-property: background-color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .footer-link-icon:hover,
@@ -595,19 +617,6 @@ p {
   margin-bottom: 50px;
 }
 
-.navigation-list .navigation-item + .navigation-item {
-  margin-left: 8px;
-}
-
-.navigation-list .navigation-button:hover,
-.navigation-list .navigation-button:focus {
-  background-color: var(--accent-color);
-  color: var(--text-white-color);
-
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
 .navigation-button {
   border: none;
 
@@ -624,6 +633,23 @@ p {
 
   border-radius: 4px;
   cursor: pointer;
+
+  transition-property: background-color, color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubic-bezier);
+}
+
+.navigation-list .navigation-button:hover,
+.navigation-list .navigation-button:focus {
+  background-color: var(--accent-color);
+  color: var(--text-white-color);
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.navigation-list .navigation-item + .navigation-item {
+  margin-left: 8px;
 }
 
 /* стилі до filter */
@@ -636,13 +662,17 @@ p {
 
 .filter-item {
   width: 370px;
-
   margin: 15px;
 }
 
 .filter-link {
+  position: relative;
   display: block;
   color: var(--primary-text-color);
+
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .filter-link:hover,
@@ -651,48 +681,38 @@ p {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-/* .filter-images:hover::before {
-  opacity: 1;
-}
-
 .filter-images {
   position: relative;
+
+  overflow: hidden;
 }
 
-.filter-images::before {
-  display: inline-block;
-  content: '';
+.filter-images:hover .filter-overlay {
+  transform: translateY(0);
+}
 
+.filter-overlay {
   position: absolute;
+
   width: 100%;
   height: 100%;
 
+  top: 0;
+  left: 0;
+
   background: rgba(33, 150, 243, 0.9);
-
-  opacity: 0;
-} */
-
-.filter-images {
-  position: relative;
-  display: flex;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-images-text {
-  position: absolute;
-
   padding: 63px 24px;
 
+  font-weight: 400;
   font-size: 18px;
   line-height: 1.55;
 
   color: var(--text-white-color);
-  background: rgba(33, 150, 243, 0.9);
-
-  opacity: 0;
-}
-
-.filter-images-text:hover {
-  opacity: 1;
 }
 
 .filter-container {
@@ -761,6 +781,10 @@ p {
 }
 
 .modal-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
   border: none;
 
   width: 30px;
